create makefile & install/uninstall scripts

--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,5 @@
+set -e
+
 export UV_NO_MODIFY_PATH=1
 export UV_INSTALL_DIR="$(pwd)/.tools/bin"
 
@@ -11,8 +13,45 @@ fi
 export PATH="$(pwd)/.tools/bin:$PATH"
 
 if [ ! -d .venv ]; then
-    uv venv .venv --python "==3.14"
+    uv venv .venv --python "==3.12"
 fi
 
 # Activate the virtual environment
 source .venv/bin/activate
+
+# rust toolchain
+export RUSTUP_HOME="$(pwd)/.rustup"
+export CARGO_HOME="$(pwd)/.cargo"
+export PATH="$CARGO_HOME/bin:$PATH"
+
+if ! command -v rustup >/dev/null; then
+	brew install rustup-init
+fi
+
+if [ ! -f .cargo/bin/cargo ]; then
+	rustup-init -y --no-modify-path --default-toolchain stable
+fi
+
+# passage stuff
+export PASSAGE_DIR="$(pwd)/module/passage/store"
+export PASSAGE_IDENTITY_FILE="$(pwd)/module/passage/identities"
+export PASSAGE_AGE="$(pwd)/.cargo/bin/rage"
+
+# install dependencies
+uv sync --all-groups --no-install-project --frozen
+
+if [ ! -f .cargo/bin/emacs-lsp-booster ]; then
+	cargo install emacs-lsp-booster
+fi
+
+if [ ! -f .cargo/bin/rage ]; then
+	cargo install rage
+fi
+
+if [ ! -f .tools/bin/passage ]; then
+	PROJECT_ROOT="$(git rev-parse --show-toplevel)"
+	mkdir -p .tools/src
+	cd .tools/src
+	git clone https://github.com/FiloSottile/passage.git
+	cd passage && make PREFIX=$PROJECT_ROOT/.tools install
+fi
