update install scripts

--- a/.envrc
+++ b/.envrc
@@ -32,20 +32,20 @@ if [ ! -f .cargo/bin/cargo ]; then
 	rustup-init -y --no-modify-path --default-toolchain stable
 fi
 
-# passage stuff
-export PASSAGE_DIR="$(pwd)/module/passage/store"
-export PASSAGE_IDENTITY_FILE="$(pwd)/module/passage/identities"
+# PASSAGE RELATED STUFF
+export PASSAGE_DIR="$(pwd)/modules/passage/store"
+export PASSAGE_IDENTITIES_FILE="$(pwd)/modules/passage/identities"
 export PASSAGE_AGE="$(pwd)/.cargo/bin/rage"
 
 # install dependencies
 uv sync --all-groups --no-install-project --frozen
 
 if [ ! -f .cargo/bin/emacs-lsp-booster ]; then
-	cargo install emacs-lsp-booster
+	cargo install emacs-lsp-booster --git https://github.com/blahgeek/emacs-lsp-booster.git --rev 5f702a2699f306a3958ff1996a2b1a625f0cee0b
 fi
 
 if [ ! -f .cargo/bin/rage ]; then
-	cargo install rage
+	cargo install rage --git https://github.com/str4d/rage.git --rev 2094f606d363d88262027bbc9b708c56753d14c2
 fi
 
 if [ ! -f .tools/bin/passage ]; then
@@ -53,5 +53,6 @@ if [ ! -f .tools/bin/passage ]; then
 	mkdir -p .tools/src
 	cd .tools/src
 	git clone https://github.com/FiloSottile/passage.git
+	git checkout 4e4c5ae14be91833791d45608f50868175c1490f
 	cd passage && make PREFIX=$PROJECT_ROOT/.tools install
 fi
