envrc - specify full path when checking whether file exists

--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,7 @@
 set -e
 
+_PROJECT_ROOT="$(git rev-parse --show-toplevel)"
+
 export UV_NO_MODIFY_PATH=1
 export UV_INSTALL_DIR="$(pwd)/.tools/bin"
 
@@ -40,15 +42,14 @@ export PASSAGE_AGE="$(pwd)/.cargo/bin/rage"
 # install dependencies
 uv sync --all-groups --no-install-project --frozen
 
-if [ ! -f .cargo/bin/rage ]; then
+if [ ! -f $_PROJECT_ROOT/.cargo/bin/rage ]; then
 	cargo install rage --git https://github.com/str4d/rage.git --rev 2094f606d363d88262027bbc9b708c56753d14c2
 fi
 
-if [ ! -f .tools/bin/passage ]; then
-	PROJECT_ROOT="$(git rev-parse --show-toplevel)"
+if [ ! -f $_PROJECT_ROOT/.tools/bin/passage ]; then
 	mkdir -p .tools/src
-	cd .tools/src
+	cd $_PROJECT_ROOT/.tools/src
 	git clone https://github.com/FiloSottile/passage.git
 	git checkout 4e4c5ae14be91833791d45608f50868175c1490f
-	cd passage && make PREFIX=$PROJECT_ROOT/.tools install
+	cd passage && make PREFIX=$_PROJECT_ROOT/.tools install
 fi
