add tinymist for typst-lsp

--- a/.envrc
+++ b/.envrc
@@ -2,6 +2,30 @@ set -e
 
 _PROJECT_ROOT="$(git rev-parse --show-toplevel)"
 
+# OS and ARCH information in case we need it when installing package
+# detect OS
+_UNAME_S="$(uname -s)"
+case "$_UNAME_S" in
+    Darwin) _OS="apple-darwin" ;;
+    Linux)  _OS="unknown-linux-gnu" ;;
+    *)
+        echo "Unsupported OS: $_UNAME_S" >&2
+        exit 1
+        ;;
+esac
+
+# detect ARCH
+_UNAME_M="$(uname -m)"
+case "$_UNAME_M" in
+    aarch64|arm64) _ARCH="aarch64" ;;
+    x86_64|amd64)  _ARCH="x86_64" ;;
+    *)
+        echo "Unsupported arch: $_UNAME_M" >&2
+        exit 1
+        ;;
+esac
+
+export UV_NO_PROGRESS=1
 export UV_NO_MODIFY_PATH=1
 export UV_INSTALL_DIR="$(pwd)/.tools/bin"
 
@@ -47,9 +71,38 @@ if [ ! -f $_PROJECT_ROOT/.cargo/bin/rage ]; then
 fi
 
 if [ ! -f $_PROJECT_ROOT/.tools/bin/passage ]; then
-	mkdir -p .tools/src
+	mkdir -p $_PROJECT_ROOT/.tools/src
 	cd $_PROJECT_ROOT/.tools/src
 	git clone https://github.com/FiloSottile/passage.git
-	git checkout 4e4c5ae14be91833791d45608f50868175c1490f
-	cd passage && make PREFIX=$_PROJECT_ROOT/.tools install
+	cd passage && git checkout 4e4c5ae14be91833791d45608f50868175c1490f
+    make PREFIX=$_PROJECT_ROOT/.tools install
+fi
+
+if [ ! -f $_PROJECT_ROOT/.tools/bin/tinymist ]; then
+    mkdir -p "$_PROJECT_ROOT/.tools" "$_PROJECT_ROOT/.tools/bin"
+
+    version="v0.14.0"
+    tarname="tinymist-${_ARCH}-${_OS}.tar.gz"
+    url="https://github.com/Myriad-Dreamin/tinymist/releases/download/${version}/${tarname}"
+
+    tmpdir="$(mktemp -d)"
+    trap 'rm -rf "$tmpdir"' EXIT
+
+    curl -L --fail --retry 3 "$url" -o "$tmpdir/$tarname"
+    tar -C "$tmpdir" -xzf "$tmpdir/$tarname"
+
+    # find the tinymist binary inside the extracted tree and install it
+    binpath="$(find "$tmpdir" -type f -name tinymist -perm -u+x | head -n 1)"
+    if [ -z "$binpath" ]; then
+        # sometimes the binary may not be marked executable in the tarball, try any file named tinymist
+        binpath="$(find "$tmpdir" -type f -name tinymist | head -n 1)"
+    fi
+
+    if [ -z "$binpath" ]; then
+        echo "Failed to locate tinymist binary in release archive" >&2
+        exit 1
+    fi
+
+    install -m 0755 "$binpath" "$_PROJECT_ROOT/.tools/bin/tinymist"
+    echo "tinymist installed to $_PROJECT_ROOT/.tools/bin/tinymist"
 fi
