--- a/.envrc
+++ b/.envrc
@@ -29,14 +29,14 @@ export UV_NO_PROGRESS=1
 export UV_NO_MODIFY_PATH=1
 export UV_INSTALL_DIR="$(pwd)/.tools/bin"
 
-if [ ! -f .tools/bin/uv ]; then
+if [ ! -f $_PROJECT_ROOT/.tools/bin/uv ]; then
     echo "uv not found locally, installing..."
     mkdir -p .tools
     curl -LsSf https://astral.sh/uv/install.sh | sh -s -- 
 fi
 
 # Ensure local uv is in PATH
-export PATH="$(pwd)/.tools/bin:$PATH"
+export PATH="$_PROJECT_ROOT/.tools/bin:$PATH"
 
 if [ ! -d .venv ]; then
     uv venv .venv --python "==3.12"
