better envrc format

--- a/.envrc
+++ b/.envrc
@@ -29,7 +29,7 @@ export UV_NO_PROGRESS=1
 export UV_NO_MODIFY_PATH=1
 export UV_INSTALL_DIR="$(pwd)/.tools/bin"
 
-if [ ! -f $_PROJECT_ROOT/.tools/bin/uv ]; then
+if [ ! -f "$_PROJECT_ROOT/.tools/bin/uv" ]; then
     echo "uv not found locally, installing..."
     mkdir -p .tools
     curl -LsSf https://astral.sh/uv/install.sh | sh -s -- 
@@ -38,12 +38,12 @@ fi
 # Ensure local uv is in PATH
 export PATH="$_PROJECT_ROOT/.tools/bin:$PATH"
 
-if [ ! -d .venv ]; then
+if [ ! -d "$_PROJECT_ROOT/.venv" ]; then
     uv venv .venv --python "==3.12"
 fi
 
 # Activate the virtual environment
-source .venv/bin/activate
+source "$_PROJECT_ROOT/.venv/bin/activate"
 
 # rust toolchain
 export RUSTUP_HOME="$(pwd)/.rustup"
@@ -66,11 +66,11 @@ export PASSAGE_AGE="$(pwd)/.cargo/bin/rage"
 # install dependencies
 uv sync --all-groups --no-install-project --frozen
 
-if [ ! -f $_PROJECT_ROOT/.cargo/bin/rage ]; then
+if [ ! -f "$_PROJECT_ROOT/.cargo/bin/rage" ]; then
 	cargo install rage --git https://github.com/str4d/rage.git --rev 2094f606d363d88262027bbc9b708c56753d14c2
 fi
 
-if [ ! -f $_PROJECT_ROOT/.tools/bin/passage ]; then
+if [ ! -f "$_PROJECT_ROOT/.tools/bin/passage" ]; then
 	mkdir -p $_PROJECT_ROOT/.tools/src
 	cd $_PROJECT_ROOT/.tools/src
 	git clone https://github.com/FiloSottile/passage.git
@@ -78,7 +78,7 @@ if [ ! -f $_PROJECT_ROOT/.tools/bin/passage ]; then
     make PREFIX=$_PROJECT_ROOT/.tools install
 fi
 
-if [ ! -f $_PROJECT_ROOT/.tools/bin/tinymist ]; then
+if [ ! -f "$_PROJECT_ROOT/.tools/bin/tinymist" ]; then
     mkdir -p "$_PROJECT_ROOT/.tools" "$_PROJECT_ROOT/.tools/bin"
 
     version="v0.14.0"
