--- a/.envrc
+++ b/.envrc
@@ -79,7 +79,7 @@ if [ ! -f "$_PROJECT_ROOT/.tools/bin/passage" ]; then
 fi
 
 if [ ! -f "$_PROJECT_ROOT/.tools/bin/tinymist" ]; then
-    mkdir -p "$_PROJECT_ROOT/.tools" "$_PROJECT_ROOT/.tools/bin"
+    mkdir -p "$_PROJECT_ROOT/.tools/bin"
 
     version="v0.14.0"
     tarname="tinymist-${_ARCH}-${_OS}.tar.gz"
@@ -105,4 +105,9 @@ if [ ! -f "$_PROJECT_ROOT/.tools/bin/tinymist" ]; then
 
     install -m 0755 "$binpath" "$_PROJECT_ROOT/.tools/bin/tinymist"
     echo "tinymist installed to $_PROJECT_ROOT/.tools/bin/tinymist"
+fi
+
+
+if [ ! -f "$_PROJECT_ROOT/.cargo/bin/harper" ]; then
+    cargo install harper-ls --version 0.72.0 --locked
 fi
