fix typo in envrc

--- a/.envrc
+++ b/.envrc
@@ -108,6 +108,6 @@ if [ ! -f "$_PROJECT_ROOT/.tools/bin/tinymist" ]; then
 fi
 
 
-if [ ! -f "$_PROJECT_ROOT/.cargo/bin/harper" ]; then
+if [ ! -f "$_PROJECT_ROOT/.cargo/bin/harper-ls" ]; then
     cargo install harper-ls --version 0.72.0 --locked
 fi
