update envrc format

--- a/.envrc
+++ b/.envrc
@@ -5,50 +5,50 @@ _PROJECT_ROOT="$(git rev-parse --show-toplevel)"
 # OS and ARCH information in case we need it when installing package
 # detect OS
 _UNAME_S="$(uname -s)"
-case "$_UNAME_S" in
+case "${_UNAME_S}" in
     Darwin) _OS="apple-darwin" ;;
     Linux)  _OS="unknown-linux-gnu" ;;
     *)
-        echo "Unsupported OS: $_UNAME_S" >&2
+        echo "Unsupported OS: ${_UNAME_S}" >&2
         exit 1
         ;;
 esac
 
 # detect ARCH
 _UNAME_M="$(uname -m)"
-case "$_UNAME_M" in
+case "${_UNAME_M}" in
     aarch64|arm64) _ARCH="aarch64" ;;
     x86_64|amd64)  _ARCH="x86_64" ;;
     *)
-        echo "Unsupported arch: $_UNAME_M" >&2
+        echo "Unsupported arch: ${_UNAME_M}" >&2
         exit 1
         ;;
 esac
 
 export UV_NO_PROGRESS=1
 export UV_NO_MODIFY_PATH=1
-export UV_INSTALL_DIR="$(pwd)/.tools/bin"
+export UV_INSTALL_DIR="${_PROJECT_ROOT}/.tools/bin"
 
-if [ ! -f "$_PROJECT_ROOT/.tools/bin/uv" ]; then
+if [ ! -f "${_PROJECT_ROOT}/.tools/bin/uv" ]; then
     echo "uv not found locally, installing..."
     mkdir -p .tools
     curl -LsSf https://astral.sh/uv/install.sh | sh -s -- 
 fi
 
 # Ensure local uv is in PATH
-export PATH="$_PROJECT_ROOT/.tools/bin:$PATH"
+export PATH="${_PROJECT_ROOT}/.tools/bin:$PATH"
 
-if [ ! -d "$_PROJECT_ROOT/.venv" ]; then
+if [ ! -d "${_PROJECT_ROOT}/.venv" ]; then
     uv venv .venv --python "==3.12"
 fi
 
 # Activate the virtual environment
-source "$_PROJECT_ROOT/.venv/bin/activate"
+source "${_PROJECT_ROOT}/.venv/bin/activate"
 
 # rust toolchain
-export RUSTUP_HOME="$(pwd)/.rustup"
-export CARGO_HOME="$(pwd)/.cargo"
-export PATH="$CARGO_HOME/bin:$PATH"
+export RUSTUP_HOME="${_PROJECT_ROOT}/.rustup"
+export CARGO_HOME="${_PROJECT_ROOT}/.cargo"
+export PATH="${CARGO_HOME}/bin:$PATH"
 
 if ! command -v rustup >/dev/null; then
 	brew install rustup-init
