--- a/.envrc
+++ b/.envrc
@@ -59,55 +59,21 @@ if [ ! -f .cargo/bin/cargo ]; then
 fi
 
 # PASSAGE RELATED STUFF
-export PASSAGE_DIR="$(pwd)/modules/passage/store"
-export PASSAGE_IDENTITIES_FILE="$(pwd)/modules/passage/identities"
-export PASSAGE_AGE="$(pwd)/.cargo/bin/rage"
+export PASSAGE_DIR="${_PROJECT_ROOT}/modules/passage/store"
+export PASSAGE_IDENTITIES_FILE="${_PROJECT_ROOT}/modules/passage/identities"
+export PASSAGE_AGE="${_PROJECT_ROOT}/.cargo/bin/rage"
 
 # install dependencies
 uv sync --all-groups --no-install-project --frozen
 
-if [ ! -f "$_PROJECT_ROOT/.cargo/bin/rage" ]; then
+if [ ! -f "${_PROJECT_ROOT}/.cargo/bin/rage" ]; then
 	cargo install rage --git https://github.com/str4d/rage.git --rev 2094f606d363d88262027bbc9b708c56753d14c2
 fi
 
-if [ ! -f "$_PROJECT_ROOT/.tools/bin/passage" ]; then
+if [ ! -f "${_PROJECT_ROOT}/.tools/bin/passage" ]; then
 	mkdir -p $_PROJECT_ROOT/.tools/src
 	cd $_PROJECT_ROOT/.tools/src
 	git clone https://github.com/FiloSottile/passage.git
 	cd passage && git checkout 4e4c5ae14be91833791d45608f50868175c1490f
     make PREFIX=$_PROJECT_ROOT/.tools install
-fi
-
-if [ ! -f "$_PROJECT_ROOT/.tools/bin/tinymist" ]; then
-    mkdir -p "$_PROJECT_ROOT/.tools/bin"
-
-    version="v0.14.0"
-    tarname="tinymist-${_ARCH}-${_OS}.tar.gz"
-    url="https://github.com/Myriad-Dreamin/tinymist/releases/download/${version}/${tarname}"
-
-    tmpdir="$(mktemp -d)"
-    trap 'rm -rf "$tmpdir"' EXIT
-
-    curl -L --fail --retry 3 "$url" -o "$tmpdir/$tarname"
-    tar -C "$tmpdir" -xzf "$tmpdir/$tarname"
-
-    # find the tinymist binary inside the extracted tree and install it
-    binpath="$(find "$tmpdir" -type f -name tinymist -perm -u+x | head -n 1)"
-    if [ -z "$binpath" ]; then
-        # sometimes the binary may not be marked executable in the tarball, try any file named tinymist
-        binpath="$(find "$tmpdir" -type f -name tinymist | head -n 1)"
-    fi
-
-    if [ -z "$binpath" ]; then
-        echo "Failed to locate tinymist binary in release archive" >&2
-        exit 1
-    fi
-
-    install -m 0755 "$binpath" "$_PROJECT_ROOT/.tools/bin/tinymist"
-    echo "tinymist installed to $_PROJECT_ROOT/.tools/bin/tinymist"
-fi
-
-
-if [ ! -f "$_PROJECT_ROOT/.cargo/bin/harper-ls" ]; then
-    cargo install harper-ls --version 0.72.0 --locked
 fi
