--- a/.envrc
+++ b/.envrc
@@ -1,74 +1,22 @@
-set -e
+set -euo pipefail
 
 _PROJECT_ROOT="$(git rev-parse --show-toplevel)"
 
-# OS and ARCH information in case we need it when installing package
-# detect OS
-_UNAME_S="$(uname -s)"
-case "${_UNAME_S}" in
-    Darwin) _OS="apple-darwin" ;;
-    Linux)  _OS="unknown-linux-gnu" ;;
-    *)
-        echo "Unsupported OS: ${_UNAME_S}" >&2
-        exit 1
-        ;;
-esac
 
-# detect ARCH
-_UNAME_M="$(uname -m)"
-case "${_UNAME_M}" in
-    aarch64|arm64) _ARCH="aarch64" ;;
-    x86_64|amd64)  _ARCH="x86_64" ;;
-    *)
-        echo "Unsupported arch: ${_UNAME_M}" >&2
-        exit 1
-        ;;
-esac
-
-export UV_NO_PROGRESS=1
-export UV_NO_MODIFY_PATH=1
-export UV_INSTALL_DIR="${_PROJECT_ROOT}/.tools/bin"
-
-if [ ! -f "${_PROJECT_ROOT}/.tools/bin/uv" ]; then
-    echo "uv not found locally, installing..."
-    mkdir -p .tools
-    curl -LsSf https://astral.sh/uv/install.sh | sh -s -- 
-fi
-
-# Ensure local uv is in PATH
 export PATH="${_PROJECT_ROOT}/.tools/bin:$PATH"
 
-if [ ! -d "${_PROJECT_ROOT}/.venv" ]; then
-    uv venv .venv --python "==3.12"
-fi
+command -v pixi >/dev/null || {
+    curl -fsSL https://pixi.sh/install.sh | PIXI_NO_PATH_UPDATE=1 PIXI_BIN_DIR=${_PROJECT_ROOT}/.tools/bin bash
+}
 
-# Activate the virtual environment
-source "${_PROJECT_ROOT}/.venv/bin/activate"
-
-# rust toolchain
-export RUSTUP_HOME="${_PROJECT_ROOT}/.rustup"
-export CARGO_HOME="${_PROJECT_ROOT}/.cargo"
-export PATH="${CARGO_HOME}/bin:$PATH"
-
-if ! command -v rustup >/dev/null; then
-	brew install rustup-init
-fi
-
-if [ ! -f .cargo/bin/cargo ]; then
-	rustup-init -y --no-modify-path --default-toolchain stable
-fi
+pixi install -e dev
+pixi install -e all
+eval "$(pixi shell-hook -e dev)"
 
 # PASSAGE RELATED STUFF
 export PASSAGE_DIR="${_PROJECT_ROOT}/modules/passage/store"
 export PASSAGE_IDENTITIES_FILE="${_PROJECT_ROOT}/modules/passage/identities"
-export PASSAGE_AGE="${_PROJECT_ROOT}/.cargo/bin/rage"
-
-# install dependencies
-uv sync --all-groups --no-install-project --frozen
-
-if [ ! -f "${_PROJECT_ROOT}/.cargo/bin/rage" ]; then
-	cargo install rage --git https://github.com/str4d/rage.git --rev 2094f606d363d88262027bbc9b708c56753d14c2
-fi
+export PASSAGE_AGE="${_PROJECT_ROOT}/"
 
 if [ ! -f "${_PROJECT_ROOT}/.tools/bin/passage" ]; then
 	mkdir -p $_PROJECT_ROOT/.tools/src
