add cargo to dev environment

--- a/.envrc
+++ b/.envrc
@@ -11,7 +11,12 @@ command -v pixi >/dev/null || {
 
 pixi install -e dev
 pixi install -e all
+
+# enable local environment
 eval "$(pixi shell-hook -e dev)"
+
+# building packages that not on binary cache
+pixi run install-markdown-lsp
 
 # PASSAGE RELATED STUFF
 export PASSAGE_DIR="${_PROJECT_ROOT}/modules/passage/store"
