--- a/.envrc
+++ b/.envrc
@@ -18,7 +18,8 @@ eval "$(pixi shell-hook -e dev)"
 # PASSAGE RELATED STUFF
 export PASSAGE_DIR="${_PROJECT_ROOT}/modules/passage/store"
 export PASSAGE_IDENTITIES_FILE="${_PROJECT_ROOT}/modules/passage/identities"
-export PASSAGE_AGE="${_PROJECT_ROOT}/"
+export LC_ALL="C"
+export PASSAGE_AGE="rage"
 
 if [ ! -f "${_PROJECT_ROOT}/.tools/bin/passage" ]; then
 	mkdir -p $_PROJECT_ROOT/.tools/src
