Add ty LSP and rass configuration support
Replace basedpyright with ty type checker and add ruff for linting.
Configure automatic installation of rassumfrassum via pixi task.

* .envrc: Install rass on environment setup.
* modules/config/rassumfrassum/python.py: Add Python preset using ty.
* pixi.toml (dependencies, tasks): Add ty/ruff/pip, add install-rass task.

--- a/.envrc
+++ b/.envrc
@@ -12,6 +12,9 @@ command -v pixi >/dev/null || {
 pixi install -e dev
 pixi install -e all
 
+# install rass
+pixi run install-rass
+
 # enable local environment
 eval "$(pixi shell-hook -e dev)"
 
