format change, use my own fork of rass

--- a/pixi.toml
+++ b/pixi.toml
@@ -34,4 +34,4 @@ bash-language-server = "*"
 markdown-oxide = "*"
 
 [tasks]
-install-rass = "pixi run --environment all 'pip install rassumfrassum'"
+install-rass = "pixi run --environment all 'pip install git+https://github.com/junyi-hou/rassumfrassum'"
