--- a/.envrc
+++ b/.envrc
@@ -12,6 +12,14 @@ command -v pixi >/dev/null || {
 pixi install -e dev
 pixi install -e all
 
+# claude-code
+command -v claude >/dev/null || {
+    pixi run -e all 'npm install -g @anthropic-ai/claude-code'
+}
+command -v claude-code-acp >/dev/null || {
+    pixi run -e all 'npm install -g @zed-industries/claude-code-acp'
+}
+
 # enable local environment
 eval "$(pixi shell-hook -e dev)"
 
