migrate to opencode

--- a/.envrc
+++ b/.envrc
@@ -12,12 +12,17 @@ command -v pixi >/dev/null || {
 pixi install -e dev
 pixi install -e all
 
-# claude-code
-command -v claude >/dev/null || {
-    pixi run -e all 'npm install -g @anthropic-ai/claude-code'
-}
-command -v claude-code-acp >/dev/null || {
-    pixi run -e all 'npm install -g @zed-industries/claude-code-acp'
+# agent
+
+# command -v claude >/dev/null || {
+#     pixi run -e all 'npm install -g @anthropic-ai/claude-code'
+# }
+# command -v claude-code-acp >/dev/null || {
+#     pixi run -e all 'npm install -g @zed-industries/claude-code-acp'
+# }
+
+command -v opencode >/dev/null || {
+    pixi run -e all "npm install -g opencode-ai@latest"
 }
 
 # enable local environment
